force-app/main/default/objects/Commission_Setting__mdt/Commission_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Configuration settings for commission calculations</description>
    <label>Commission Setting</label>
    <pluralLabel>Commission Settings</pluralLabel>
</CustomObject>