force-app/main/default/objects/Commission_Setting__mdt/fields/Calculation_Trigger_Stage__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Trigger_Stage__c</fullName>
    <description>Opportunity stage that triggers commission calculation</description>
    <label>Calculation Trigger Stage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>