force-app/main/default/objects/Commission_Setting__mdt/fields/Default_Clawback_Days__c.field-meta.xml
<CustomField>
    <fullName>Default_Clawback_Days__c</fullName>
    <description>Number of days after which clawback is no longer applicable</description>
    <label>Default Clawback Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>