force-app/main/default/objects/Commission_Setting__mdt/fields/Enable_Split_Commissions__c.field-meta.xml
<CustomField>
    <fullName>Enable_Split_Commissions__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable split commissions between multiple roles</description>
    <label>Enable Split Commissions</label>
    <type>Checkbox</type>
</CustomField>